--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Bipin's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/b53k/resume/blob/main/Resume.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/b53k/resume/main/Resume.pdf
+ &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
